--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="container">
         <section class="card slide-up">
             <h2>My Friends</h2>
-            <a href="https://github.com/natan580528-rgb/My-Website.git" target="_blank">
+            <a href="https://natan580528-rgb.github.io/My-Website/" target="_blank">
                 👤 My friend Tena
             </a>
             <a href="https://munyoeun-bot.github.io/Website-online/" target="_blank">
@@ -38,3 +38,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
